Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,14 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'NoneType'>\n"
+     ]
+    }
+   ],
    "source": [
     "travel_month = None\n",
-    "print"
+    "print(type(travel_month))"
    ]
   },
   {
